--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -7,11 +7,8 @@ on early-init
 on init
     mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
     mkdir /storage/sdcard0 0700 root root
-    export EXTERNAL_STORAGE /storage/sdcard0
 
-    #sd-ext
-    mkdir /sd-ext 0700 root root
-    export SD_EXT_DIRECTORY /sd-ext
+    export EXTERNAL_STORAGE /storage/sdcard0
 
     # Support legacy paths
     symlink /storage/sdcard0 /sdcard
@@ -84,17 +81,14 @@ on boot
 
     # Increase readahead buffers on MMC devices
     write /sys/block/mmcblk0/queue/read_ahead_kb 3072
+
     # Read / Write 12MB/s / 70MB/s on Sandisk 16GB Class 10
     write /sys/block/mmcblk1/queue/read_ahead_kb 4096
-    write /sys/block/mmcblk1/queue/scheduler cfq
 
     # Flash storage isn't a good entropy source, and only causes locking
     # overhead in the kernel. Turn it off.
     write /sys/block/mmcblk0/queue/add_random 0
     write /sys/block/mmcblk1/queue/add_random 0
-
-    # Enable dynamic fsync
-    write /sys/kernel/dyn_fsync/Dyn_fsync_active 1
 
     # Read only 1 page at a time
     write /proc/sys/vm/page-cluster 0
@@ -208,7 +202,7 @@ service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0
     class late_start
     disabled
 
-service rmt_storage /system/bin/rmt_storage /dev/block/mmcblk0p13 /dev/block/mmcblk0p14
+service rmt_storage /system/bin/rmt_storage
     class core
     user root
 
@@ -219,9 +213,3 @@ on property:service.adb.root=1
     write /sys/class/android_usb/android0/enable 0
     restart adbd
     write /sys/class/android_usb/android0/enable 1
-
-service setup_fs /system/bin/setup_fs mmcblk0p26 mmcblk0p27
-    class core
-    user root
-    group root
-    oneshot
