--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -5,16 +5,12 @@ on early-init
     mount debugfs debugfs /sys/kernel/debug
 
 on init
-    mkdir /mnt/media_rw/sdcard0 0700 media_rw media_rw
-    mkdir /storage/sdcard0 0700 root root
-
-    export EXTERNAL_STORAGE /storage/sdcard0
+    # Export for legacy adreno libs
+    export LD_PRELOAD "/system/lib/libboringssl-compat.so"
 
     # Support legacy paths
     symlink /storage/sdcard0 /sdcard
     symlink /storage/sdcard0 /mnt/sdcard
-    mkdir /storage/primary 0555 root root
-    symlink /storage/sdcard0 /storage/primary/legacy
 
 on fs
     mount_all /fstab.qcom
@@ -196,11 +192,6 @@ service akmd /system/bin/akmd
     class core
     user compass
     group compass misc input
-
-# sdcard daemon
-service fuse_sdcard0 /system/bin/sdcard -u 1023 -g 1023 -d /mnt/media_rw/sdcard0 /storage/sdcard0
-    class late_start
-    disabled
 
 service rmt_storage /system/bin/rmt_storage
     class core
